--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body style="max-width:30em;margin:auto;background-color:#ffeb3b;padding:1em;">
   <br>
   <h1>Ask Jono</h1>
-  <form class="form-horizontal" action="https://formspree.io/jonathonshields@gmail.com" method="POST">
+  <form class="form-horizontal" netlify name="Ask Jono" action="/thanks" method="POST">
     <fieldset>
       <!-- Name input-->
       <div class="form-group">
@@ -54,9 +54,6 @@
           <textarea class="form-control" id="message" name="message" placeholder="Please enter your question here..." rows="5"></textarea>
         </div>
       </div>
-
-      <!-- Hidden Fields -->
-      <input type="hidden" name="_next" value="//jonoshields.com/thanks" />
 
       <!-- Form actions -->
       <div class="form-group">
