--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div class="form-group">
         <label class="col-md-3 control-label" for="email">E-mail</label>
         <div class="col-md-12">
-          <input id="email" name="_replyto" type="text" placeholder="Your email" class="form-control">
+          <input id="email" name="Email" type="text" placeholder="Your email" class="form-control">
         </div>
       </div>
 
