--- a/thanks.html
+++ b/thanks.html
@@ -8,21 +8,14 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
     <style>
-      a > p{
-        color:#333;
-        font-size: 150%;
-      }
-      p{
-        font-size:80%;
-      }
-      h1{
-          padding-bottom: 40px;
-      }
-
+      * {
+          font-family:Montserrat, san-serif;
+        }
       </style>
 </head>
 <body style="max-width:30em;margin:auto;background-color:#ffeb3b;padding:1em;">
   <br>
   <h1>Thanks for asking Jono</h1>
+    <p>Back to <a href="ask">Ask Jono</a></p>
 </body>
 </html>
