--- a/thanks.html
+++ b/thanks.html
@@ -4,12 +4,11 @@
 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
 
     <style>
-      * {
-          font-family:Montserrat, san-serif;
+      body {
+          font-family:'Open Sans', san-serif;
         }
       </style>
 </head>
