--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="form-group">
         <label class="col-md-3 control-label" for="message">Question</label>
         <div class="col-md-12">
-          <textarea class="form-control" id="message" name="message" placeholder="Please enter your question here..." rows="5"></textarea>
+          <textarea class="form-control" required id="message" name="message" placeholder="Please enter your question here..." rows="5"></textarea>
         </div>
       </div>
 
