--- a/thanks.html
+++ b/thanks.html
@@ -15,6 +15,6 @@
 <body style="max-width:30em;margin:auto;background-color:#ffeb3b;padding:1em;">
   <br>
   <h1>Thanks for asking Jono</h1>
-    <p>Back to <a href="ask">Ask Jono</a></p>
+    <p>Back to <a href="/">Ask Jono</a></p>
 </body>
 </html>
